# WifiSpaceMapper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  idf-shell.bat  requirements.txt  run_visualizer.bat  sdkconfig  sdkconfig.defaults
docs/: VISUALIZER.md
main/: CMakeLists.txt  main.c  secrets.example.h
tools/: csi_face.py  csi_stream.py  detector.py  live_csi_plot.py  make_previews.py  record_csi.py  selftest_csi.py  wifi_visualizer.py
